--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,19 @@
       <version>5.2.4</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.javalin</groupId>
+      <artifactId>javalin-rendering</artifactId>
+      <version>5.6.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.jknack</groupId>
+      <artifactId>handlebars</artifactId>
+      <version>4.3.1</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
