Docs: Added dependency usage to README.md

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.github.r0land013</groupId>
   <artifactId>showly</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
 
   <name>Showly</name>
   <url>https://github.com/R0land013/showly</url>
